force-app/main/default/objects/Candidate__c/Candidate__c.object-meta.xml
<CustomObject>
    <label>Candidate</label>
    <pluralLabel>Candidates</pluralLabel>
    <nameField>
        <label>Candidate Number</label>
        <displayFormat>CAN-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores candidate profiles, skills, and resume data for the recruitment platform.</description>
</CustomObject>