force-app/main/default/objects/Candidate__c/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <description>Certifications held by the candidate.</description>
    <label>Certifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>