force-app/main/default/objects/Candidate__c/fields/Current_Most_Recent_Role__c.field-meta.xml
<CustomField>
    <fullName>Current_Most_Recent_Role__c</fullName>
    <description>The candidate's current or most recent job title.</description>
    <label>Current / Most Recent Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>