force-app/main/default/objects/Candidate__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Text</type>
    <length>255</length>
    <description>Candidate's current city, state, or country.</description>
</CustomField>