force-app/main/default/objects/Candidate__c/fields/Resume_Summary__c.field-meta.xml
<CustomField>
    <fullName>Resume_Summary__c</fullName>
    <description>AI-generated summary of the candidate's resume.</description>
    <label>Resume Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>